elab-stlc-unification-recovery/examples/full.stderr
error: mismatched types:
  expected: Int
  found: Bool
  ┌─ <stdin>:1:15
  │
1 │ let x : Int := true;
  │                ^^^^

error: unbound type `Foo`
  ┌─ <stdin>:3:16
  │
3 │ let example-1 : Foo -> Int :=
  │                 ^^^

error: unexpected parameter
  ┌─ <stdin>:4:8
  │
4 │   fun x y => x + z;
  │         ^

error: unbound name `z`
  ┌─ <stdin>:4:17
  │
4 │   fun x y => x + z;
  │                  ^

error: mismatched types:
  expected: Bool
  found: Int
  ┌─ <stdin>:7:11
  │
7 │   fun (x : Bool) y x => x;
  │            ^^^^

error: unexpected parameter
  ┌─ <stdin>:7:17
  │
7 │   fun (x : Bool) y x => x;
  │                  ^

error: unexpected parameter
  ┌─ <stdin>:7:19
  │
7 │   fun (x : Bool) y x => x;
  │                    ^

error: mismatched types:
  expected: Int
  found: Bool
  ┌─ <stdin>:9:4
  │
9 │ x + false
  │     ^^^^^

